<resources>
    <string name="app_name">Automation</string>
    <string name="text_login">لطفا نام کاربری و رمز عبور خود را وارد کنید</string>
    <string name="title_login">به برنامه اتوماسیون خوش آمدید</string>
    <string name="username">نام کاربری</string>
    <string name="password">رمزعبور</string>
    <string name="login">ورود</string>
    <string name="home">خانه</string>
    <string name="exitFromApp">خروج از برنامه</string>
    <string name="exitFromAccount">خروج از حساب کاربری</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="new_user"> برای ایجاد حساب کلیک کنید</string>
    <string name="signup">ایجاد حساب</string>
    <string name="automation">اتوماسیون</string>
    <string name="setting">تنظیمات</string>
    <string name="font">فونت</string>
    <string name="port">پورت</string>
    <string name="ip">آی پی</string>
    <string name="ip_input">آی پی خود را وارد کنید</string>
    <string name="port_input">پورت خود را وارد کنید</string>
    <string name="save">ذخیره</string>
    <string name="selectFont">فونت مورد نظر خود را انتخاب کنید</string>
    <string name="unknowErro">خطای نامشخص</string>
    <string name="ersalShodeBe">ارسال شده به</string>
    <string name="noeKar">نوع کار</string>
    <string name="noeMahsol">نوع محصول</string>
    <string name="sharhKar">شرح کار</string>
    <string name="joziatKar">جزئیات کار</string>
    <string name="zamanGozaresh">زمان گزارش</string>
    <string name="hardWareSell">فروش سخت افزار</string>
    <string name="softWareSell">فروش نرم افزار</string>
    <string name="tamdidQarardad">تمدید قرارداد</string>
    <string name="khadamatPoshtibani">خدمات پشتیبانی</string>
    <string name="hokmKarha">حکم کارها</string>
    <string name="bazaryabi">بازاریابی</string>
    <string name="lidha">گزارش لیدها</string>
    <string name="darsadKharidMoshtari">درصد خرید مشتری</string>
    <string name="voicePoshtibani">مکالمات</string>
    <string name="ticket">تیکت ها</string>
    <string name="unDoneHokmKar">حکم کارهای باز</string>
    <string name="ticketDetails">جزئیات تیکت</string>
    <string name="filterTicket">فیلتر تیکت ها</string>
    <string name="sefareshatMoshtariJadid">سفارش مشتریان جدید</string>
    <string name="vaziatSefaresh">وضعیت سفارش</string>
    <string name="gozareshKar">گزارش کار</string>
    <string name="gozareshKarGozareshKar">گزارشکار گزارشکار</string>
    <string name="darsadTakhfifAzHarsefaresh">درصد تخفیف از هر سفارش</string>
    <string name="darsadSefareshat">درصد سفارشات</string>
    <string name="tedadHokmKarha">گردش حکم کارها</string>
    <string name="darsadKharidShahrestan">درصد خرید شهرستان ها</string>
    <string name="sendInfo">ثبت و بررسی</string>
    <string name="voiceDialogDescription">برای جستوجو مکالمه حداقل تکمیل یک فیلد لازم است.</string>
    <string name="tedadKolBazaryabi">تعداد کل بازاریابی</string>
    <string name="tedadKolTiger">تعداد کل تایگر</string>
    <string name="tedadKolNovin">تعداد کل نوین</string>
    <string name="tedadbazaryabi">تعداد بازاریابی</string>
    <string name="joziatBazaryabi">جزئیات بازاریابی</string>
    <string name="personal">پرسنل</string>
    <string name="radif">ردیف</string>
    <string name="clientName">نام مشتری</string>
    <string name="phoneNumber">شماره تلفن</string>
    <string name="productType">نوع محصول</string>
    <string name="status">وضعیت</string>
    <string name="insertDate">تاریخ ثبت</string>
    <string name="description">توضیحات</string>
    <string name="shomaretamas">شماره تماس</string>
    <string name="mokaleme">مکالمه</string>
    <string name="codHesab">کد حساب</string>
    <string name="client">مشتری</string>
    <string name="tedadAqlamKol">تعداد اقلام کل</string>
    <string name="kharidKol">خرید کل</string>
    <string name="darsadKharidMoshtariAzForooshKol">درصد خرید این مشتری از فروش کل</string>
    <string name="entekhabPersonel">انتخاب پرسنل</string>
    <string name="entekhabMahsol">انتخاب محصول</string>
    <string name="moqayeseBa">مقایسه با تاریخ...</string>
    <string name="nameNarmAfzar"> نام نرم افزار  </string>
    <string name="tedadForoosh">  تعداد فروش </string>
    <string name="mianginQaymat">  میانگین قیمت </string>
    <string name="Qaymat">  قیمت </string>
    <string name="jamForoosh">  جمع فروش </string>
    <string name="shomareHokm"> شماره حکم  </string>
    <string name="sabtKonande">  ثبت کننده </string>
    <string name="noeKhadamat">  نوع خدمات </string>
    <string name="moshtari">  مشتری </string>
    <string name="serial"> سریال </string>
    <string name="playVoice"> پخش صدا </string>
    <string name="sharhErja"> شرح ارجاء  </string>
    <string name="tedaHokmKar"> تعداد حکم کار  </string>
    <string name="tedadErjashode"> تعداد ارجاع شده  </string>
    <string name="customerRequests"> درخواست های مشتری </string>
    <string name="followers"> دنبال کننده ها </string>
    <string name="tedad">  تعداد </string>
    <string name="mablaq"> مبلغ </string>
    <string name="mablaqKol"> مبلغ کل </string>
    <string name="tedadGozareshat">تعداد گزارشات </string>
    <string name="majmoZaman"> مجموع زمان </string>
    <string name="tedadKolAqlam"> تعداد کل اقلام </string>
    <string name="tedadKolQarardad"> تعداد کل قرارداد </string>
    <string name="startTime"> از ساعت </string>
    <string name="endTime"> تا ساعت </string>
    <string name="shahr">شهر</string>
    <string name="tedadKol">تعداد کل</string>
    <string name="darsad">درصد</string>
    <string name="nameMahsool">نام محصول</string>
    <string name="majmoForoosh">مجموع فروش</string>
    <string name="darsadThakhfif">درصد تخفیف</string>
    <string name="majmoThakhfif">مجموع تخفیف</string>
    <string name="entekhabService">انتخاب سرویس</string>
    <string name="modelmahsol">مدل محصول</string>
    <string name="entekhabnoeMahsool">انتخاب نوع محصول</string>
    <string name="tedadKolKhadamt">تعداد کل خدمات</string>
    <string name="khadamatTiger">خدمات تایگر</string>
    <string name="khadamatNovin">خدمات نوین</string>
    <string name="paygiriNovin">کل پیگیری نوین</string>
    <string name="unAccess">دسترسی تایید نشد</string>
    <string name="unAccess_text">امکان مشاهده این صفحه برای شما امکان پذیر نمی باشد.</string>
    <string name="back">بازگشت</string>
    <string name="closeTab">بستن</string>
    <string name="ipError">مشکل IP</string>
    <string name="ipErrorVoice">آدرس IP یا Port برای مکالمه اشتباه است.</string>
    <string name="ipError_message">لطفا ابتدا در بخش تنظیمات  IP و Port خودرا مشخص کنید سپس وارد شوید.</string>
    <string name="restartTitle">شروع مجدد برنامه</string>
    <string name="restartMessage">برای اعمال فونت نیاز به شروع مجدد برنامه است.</string>
    <string name="restart">شروع مجدد</string>
    <string name="cancel">انصراف</string>
    <string name="noeGharardad">نوع قرارداد</string>
    <string name="tedadGharardad">تعداد قرارداد</string>
    <string name="mablaqGharardad">مبلغ قرارداد</string>
    <string name="nameTamasGirandeh">نام تماس گیرنده</string>
    <string name="dalilTamasMoshtari">دلیل تماس مشتری</string>
    <string name="saat">ساعت</string>
    <string name="emtiaz">امتیاز</string>
    <string name="internetError">مشکل اتصال</string>
    <string name="tryAgain">تلاش مجدد</string>
    <string name="بستن">مشکل اتصال</string>
    <string name="internetMessage">اتصال شما به اینترنت قطع است، لطفا از اتصال اینترنت خود اطمینان حاصل بفرماید و دوباره تلاش کنید.</string>
    <string name="nahveAshnaee">نحوه آشنایی</string>
    <string name="codeHesabMoshtari">کدحساب مشتری</string>
    <string name="noeSefaresh">نوع سفارش</string>
    <string name="shomareSefaresh">شماره سفارش</string>
    <string name="mablaqSefaresh">مبلغ سفارش</string>
    <string name="tarikhSefaresh">تاریخ سفارش </string>
    <string name="daste">دسته</string>
    <string name="nahveAshenaei">نحوه آشنایی</string>
    <string name="areFactor">ارائه فاکتور</string>
    <string name="present">پرزنت</string>
    <string name="darEntezarTaeedMoshtari">درانتظار مشتری</string>
    <string name="paygiryTelfoni">پیگیری تلفنی</string>
    <string name="paygiryNashode">پیگیری نشده</string>
    <string name="KharidAzsherkatDigar">خرید از شرکت دیگر</string>
    <string name="demo">دمو</string>
    <string name="adamMojoodi">عدم موجودی</string>
    <string name="moshtariQayrMortabet">مشتری غیر مرتبط</string>
    <string name="monjarBeforoosh">منجر به فروش</string>
    <string name="monsarefAzKharid">منصرف از خرید</string>
    <string name="jedadKol">تعداد کل</string>
    <string name="time"> زمان</string>
    <string name="date">تاریخ</string>
    <string name="sharh">شرح</string>
    <string name="erjadahande">ارجاع دهنده</string>
    <string name="noeService">نوع سرویس</string>
    <string name="all"> همه</string>
    <string name="allSearchVoice"> جستجوی همه ی مکالمه ها در تاریخ انتخاب شده.</string>
    <string name="tiger"> تایگر</string>
    <string name="novin"> نوین</string>
    <string name="servicNoghree">سرویس نقره ای</string>
    <string name="serviceAbi">سرویس آبی</string>
    <string name="serviceTalaee">سرویس طلایی</string>
    <string name="namePoshtiban"> نام پشتیبان</string>
    <string name="shomareDakheli"> شماره داخلی</string>
    <string name="tedadTamas">تعداد تماس</string>
    <string name="modatMokalem"> مدت مکالمه</string>
    <string name="mianginMokaleme">میانگین مکالمه</string>
    <string name="mianginEmtiaz"> میانگین امتیاز</string>
    <string name="tedadKhadamat"> تعداد خدمات</string>
    <string name="tedadPaygiri"> تعداد پیگیری</string>
    <string name="group"> گروه</string>
    <string name="model">مدل</string>
    <string name="software"> نرم افزار</string>
    <string name="hardware"> سخت افزار</string>
    <string name="empty_message">داده ای در این تاریخ وجود ندارد.</string>
    <string name="empty_request">درخواستی وجود ندارد.</string>
    <string name="typoGraphi">تایپوگرافی</string>
    <string name="ip_setting_for_voice">تنظیمات IP برای مکالمات</string>
    <string name="ip_setting">تنظیمات IP </string>
    <string name="searchName">جستجو براساس نام </string>
    <string-array name="fontArray">
        <item>فونت ایران سنس </item>
        <item>فونت حکایت </item>
        <item>فونت یکان </item>
    </string-array>
    <string-array name="companyList">
        <item>نوین</item>
        <item>تایگر</item>
        <item>همه</item>
    </string-array>
    <string-array name="productList">
        <item>نرم افزار</item>
        <item>سخت افزار</item>
        <item>همه</item>
    </string-array>
    <string-array name="serviceType">
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
    </string-array>
    <string-array name="serviceTypes">
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>
        <item>آبی</item>
        <item>نقره ای</item>
        <item>طلایی</item>

    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mobile">موبایل</string>
    <string name="unCkecked">بررسی نشده</string>
    <string name="doingCheck">درحال بررسی</string>
    <string name="inLine">در صف انجام</string>
    <string name="doing">درحال انجام</string>
    <string name="stoptemp">توقف موقت</string>
    <string name="sabtTicketman">ثبت شده توسط من</string>
    <string name="bayganiShode">بایگانی شده</string>
    <string name="endTask">خاتمه یافته</string>
</resources>