<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/lightYellow"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ip_setting"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"/>
    <EditText
        android:id="@+id/ET_setting_ip"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:inputType="phone"
        android:background="@drawable/ip_shape_et"
        android:hint="@string/ip_input"
        android:paddingHorizontal="16dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/ET_setting_port"
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:inputType="phone"
        android:hint="@string/port_input"
        android:paddingHorizontal="16dp"
        android:background="@drawable/ip_shape_et"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/Mbtn_ok_ip_dialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="?colorOnPrimary"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="12dp"
        android:layout_gravity="center"/>

</LinearLayout>