<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/whiteBlue"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:paddingVertical="4dp"
        android:layout_marginTop="8dp"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:textColor="@color/black"
        android:text="@string/voiceDialogDescription"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?dividerColor"/>


    <EditText
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:id="@+id/ET_Dialog_searchVoice_serial"
        android:layout_marginHorizontal="16dp"
        android:paddingStart="4dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingEnd="4dp"
        android:hint="@string/serial"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:layout_marginTop="16dp"
        android:id="@+id/ET_Dialog_searchVoice_mobile"
        android:layout_marginHorizontal="16dp"
        android:paddingStart="4dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="14sp"
        android:paddingEnd="4dp"
        android:hint="@string/mobile"/>

           <CheckBox
               android:layout_width="wrap_content"
               android:layout_height="match_parent"
               android:text="@string/allSearchVoice"
               android:layout_gravity="start"
               android:textColor="@color/black"
               android:textSize="14sp"
               android:layout_marginTop="8dp"
               android:layout_marginStart="16dp"
               android:layout_marginEnd="46dp"
               android:id="@+id/checkbox_all_searchVoiceDialog"/>
           <com.google.android.material.button.MaterialButton
               android:id="@+id/Mbtn_sendInfo_voice"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:text="@string/sendInfo"
               android:layout_gravity="center_horizontal"
               android:layout_marginHorizontal="16dp"
               android:layout_marginBottom="16dp"
               app:cornerRadius="16dp"
               android:padding="4dp"
               android:layout_marginTop="16dp"

               />


</LinearLayout>