<?xml version="1.0" encoding="utf-8"?>


<LinearLayout
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:weightSum="11"
    android:layout_gravity="center_horizontal"
    android:gravity="center_vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">



        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_shomerSefaresh"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:ellipsize="end"
            android:layout_weight="1.75"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/shomareSefaresh"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?dividerColor" />

        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_moshtari"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_weight="1.5"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/moshtari"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?dividerColor" />

        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_group"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/group"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?dividerColor" />

        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_model"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/model"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?dividerColor" />

        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_tedad"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/tedad"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?dividerColor" />

        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_qaymat"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/Qaymat"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?dividerColor" />

        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_mablaqKol"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/mablaqKol"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?dividerColor" />

        <TextView
            android:id="@+id/TV_item_darsadkhardi_shahrestan_detail_noeMahsol"
            android:layout_width="0dp"
            android:layout_weight="1.25"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingHorizontal="6dp"
            android:paddingVertical="6dp"
            android:text="@string/noeMahsol"
            android:textColor="@color/black"
            android:textSize="14sp"
            android:textStyle="bold" />


    </LinearLayout>


